splinter.h


struct splinter_signal_node {
    alignas(64) atomic_uint_least64_t counter;
};
struct splinter_event_bus {
    atomic_uint_least64_t dirty_mask[SPLINTER_EVENT_BUS_MASK_WORDS];
    atomic_int_least32_t  owner_fd;
    atomic_int_least32_t  owner_pid;
};
struct splinter_header {
    uint32_t magic;
    uint32_t version;
    uint32_t slots;
    uint32_t max_val_sz;
    atomic_uint_least64_t epoch;
    atomic_uint_least8_t core_flags;
    atomic_uint_least8_t user_flags;
    atomic_uint_least32_t val_brk;
    uint32_t val_sz;
    uint32_t alignment;
    atomic_uint_least64_t parse_failures;
    atomic_uint_least64_t last_failure_epoch;
    atomic_uint_least8_t bloom_watches[64];
    alignas(64) struct splinter_signal_node signal_groups[SPLINTER_MAX_GROUPS];
    alignas(64) struct splinter_event_bus event_bus;
};
typedef struct splinter_header_snapshot {
    uint32_t magic;
    uint32_t version;
    uint32_t slots;
    uint32_t max_val_sz;
    uint64_t epoch;
    uint8_t core_flags;
    uint8_t user_flags;
    uint64_t parse_failures;
    uint64_t last_failure_epoch;
} splinter_header_snapshot_t;
int splinter_get_header_snapshot(splinter_header_snapshot_t *snapshot);
typedef struct splinter_slot_snapshot {
    uint64_t hash;
    uint64_t epoch;
    uint32_t val_off;
    uint32_t val_len;
    uint8_t type_flag;
    uint8_t user_flag;
    uint64_t ctime;
    uint64_t atime;
    uint64_t bloom;
    char key[SPLINTER_KEY_MAX];
#ifdef SPLINTER_EMBEDDINGS
    float embedding[SPLINTER_EMBED_DIM];
#endif
} splinter_slot_snapshot_t;
typedef enum {
    SPL_OP_AND,
    SPL_OP_OR,
    SPL_OP_XOR,
    SPL_OP_NOT,
    SPL_OP_INC,
    SPL_OP_DEC
} splinter_integer_op_t;
int splinter_get_slot_snapshot(const char *key, splinter_slot_snapshot_t *snapshot);
int splinter_create(const char *name_or_path, size_t slots, size_t max_value_sz);
int splinter_open(const char *name_or_path);
int splinter_open_or_create(const char *name_or_path, size_t slots, size_t max_value_sz);
int splinter_create_or_open(const char *name_or_path, size_t slots, size_t max_value_sz);
void splinter_close(void);
void splinter_purge(void);
int splinter_set(const char *key, const void *val, size_t len);
int splinter_unset(const char *key);
int splinter_get(const char *key, void *buf, size_t buf_sz, size_t *out_sz);
int splinter_list(char **out_keys, size_t max_keys, size_t *out_count);
int splinter_poll(const char *key, uint64_t timeout_ms);
void splinter_config_set(struct splinter_header *hdr, uint8_t mask);
void splinter_config_clear(struct splinter_header *hdr, uint8_t mask);
int splinter_config_test(struct splinter_header *hdr, uint8_t mask);