bindings/rust/persistent/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of splinter_header_snapshot"]
        [::std::mem::size_of::<splinter_header_snapshot>() - 48usize];
    ["Alignment of splinter_header_snapshot"]
        [::std::mem::align_of::<splinter_header_snapshot>() - 8usize];
    ["Offset of field: splinter_header_snapshot::magic"]
        [::std::mem::offset_of!(splinter_header_snapshot, magic) - 0usize];
    ["Offset of field: splinter_header_snapshot::version"]
        [::std::mem::offset_of!(splinter_header_snapshot, version) - 4usize];
    ["Offset of field: splinter_header_snapshot::slots"]
        [::std::mem::offset_of!(splinter_header_snapshot, slots) - 8usize];
    ["Offset of field: splinter_header_snapshot::max_val_sz"]
        [::std::mem::offset_of!(splinter_header_snapshot, max_val_sz) - 12usize];
    ["Offset of field: splinter_header_snapshot::epoch"]
        [::std::mem::offset_of!(splinter_header_snapshot, epoch) - 16usize];
    ["Offset of field: splinter_header_snapshot::core_flags"]
        [::std::mem::offset_of!(splinter_header_snapshot, core_flags) - 24usize];
    ["Offset of field: splinter_header_snapshot::user_flags"]
        [::std::mem::offset_of!(splinter_header_snapshot, user_flags) - 25usize];
    ["Offset of field: splinter_header_snapshot::parse_failures"]
        [::std::mem::offset_of!(splinter_header_snapshot, parse_failures) - 32usize];
    ["Offset of field: splinter_header_snapshot::last_failure_epoch"]
        [::std::mem::offset_of!(splinter_header_snapshot, last_failure_epoch) - 40usize];
};
#[doc = " @struct splinter_header_snapshot\n @brief structure to hold splinter bus snapshots"]
pub type splinter_header_snapshot_t = splinter_header_snapshot;
unsafe extern "C" {
    #[doc = " @brief Copy the current atomic Splinter header structure into a corresponding\n non-atomic client version.\n @param snapshot A splinter_header_snaphshot_t structure to receive the values.\n @return -1 on failure, 0 on success."]
    pub fn splinter_get_header_snapshot(
        snapshot: *mut splinter_header_snapshot_t,
    ) -> ::std::os::raw::c_int;
}
#[doc = " @structure splinter_slot_snapshot\n @brief A structure to hold a snapshot of a single slot"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct splinter_slot_snapshot {
    #[doc = " @brief The FNV-1a hash of the key. 0 indicates an empty slot."]
    pub hash: u64,
    #[doc = " @brief Per-slot epoch, incremented on write to this slot. Used for polling."]
    pub epoch: u64,
    #[doc = " @brief Offset into the VALUES region where the value data is stored."]
    pub val_off: u32,
    #[doc = " @brief The actual length of the stored value data (atomic)."]
    pub val_len: u32,
    #[doc = " @brief The slot type flags"]
    pub type_flag: u8,
    #[doc = " @brief The slot user flags"]
    pub user_flag: u8,
    #[doc = " @brief Storage for creation time"]
    pub ctime: u64,
    #[doc = " @brief Storage for access time"]
    pub atime: u64,
    #[doc = " @brief The null-terminated key string."]
    pub key: [::std::os::raw::c_char; 64usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of splinter_slot_snapshot"][::std::mem::size_of::<splinter_slot_snapshot>() - 112usize];
    ["Alignment of splinter_slot_snapshot"]
        [::std::mem::align_of::<splinter_slot_snapshot>() - 8usize];
    ["Offset of field: splinter_slot_snapshot::hash"]
        [::std::mem::offset_of!(splinter_slot_snapshot, hash) - 0usize];
    ["Offset of field: splinter_slot_snapshot::epoch"]
        [::std::mem::offset_of!(splinter_slot_snapshot, epoch) - 8usize];
    ["Offset of field: splinter_slot_snapshot::val_off"]
        [::std::mem::offset_of!(splinter_slot_snapshot, val_off) - 16usize];
    ["Offset of field: splinter_slot_snapshot::val_len"]
        [::std::mem::offset_of!(splinter_slot_snapshot, val_len) - 20usize];
    ["Offset of field: splinter_slot_snapshot::type_flag"]
        [::std::mem::offset_of!(splinter_slot_snapshot, type_flag) - 24usize];
    ["Offset of field: splinter_slot_snapshot::user_flag"]
        [::std::mem::offset_of!(splinter_slot_snapshot, user_flag) - 25usize];
    ["Offset of field: splinter_slot_snapshot::ctime"]
        [::std::mem::offset_of!(splinter_slot_snapshot, ctime) - 32usize];
    ["Offset of field: splinter_slot_snapshot::atime"]
        [::std::mem::offset_of!(splinter_slot_snapshot, atime) - 40usize];
    ["Offset of field: splinter_slot_snapshot::key"]
        [::std::mem::offset_of!(splinter_slot_snapshot, key) - 48usize];
};
#[doc = " @structure splinter_slot_snapshot\n @brief A structure to hold a snapshot of a single slot"]
pub type splinter_slot_snapshot_t = splinter_slot_snapshot;
pub const splinter_integer_op_t_SPL_OP_AND: splinter_integer_op_t = 0;
pub const splinter_integer_op_t_SPL_OP_OR: splinter_integer_op_t = 1;
pub const splinter_integer_op_t_SPL_OP_XOR: splinter_integer_op_t = 2;
pub const splinter_integer_op_t_SPL_OP_NOT: splinter_integer_op_t = 3;
pub const splinter_integer_op_t_SPL_OP_INC: splinter_integer_op_t = 4;
pub const splinter_integer_op_t_SPL_OP_DEC: splinter_integer_op_t = 5;
#[doc = " @brief for atomic integer operations"]
pub type splinter_integer_op_t = ::std::os::raw::c_uint;
unsafe extern "C" {
    #[doc = " @brief Copy the current atomic Splinter slot header to a corresponding client\n structure.\n @param snapshot A splinter_slot_snaphshot_t structure to receive the values.\n @return -1 on failure, 0 on success."]
    pub fn splinter_get_slot_snapshot(
        key: *const ::std::os::raw::c_char,
        snapshot: *mut splinter_slot_snapshot_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Creates and initializes a new splinter store.\n @param name_or_path The name of the shared memory object or path to the file.\n @param slots The total number of key-value slots to allocate.\n @param max_value_sz The maximum size in bytes for any single value.\n @return 0 on success, -1 on failure (e.g., store already exists)."]
    pub fn splinter_create(
        name_or_path: *const ::std::os::raw::c_char,
        slots: usize,
        max_value_sz: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Opens an existing splinter store.\n @param name_or_path The name of the shared memory object or path to the file.\n @return 0 on success, -1 on failure (e.g., store does not exist)."]
    pub fn splinter_open(name_or_path: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Opens an existing splinter store, or creates it if it does not exist.\n @param name_or_path The name of the shared memory object or path to the file.\n @param slots The total number of key-value slots if creating.\n @param max_value_sz The maximum value size in bytes if creating.\n @return 0 on success, -1 on failure."]
    pub fn splinter_open_or_create(
        name_or_path: *const ::std::os::raw::c_char,
        slots: usize,
        max_value_sz: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Creates a new splinter store, or opens it if it already exists.\n @param name_or_path The name of the shared memory object or path to the file.\n @param slots The total number of key-value slots if creating.\n @param max_value_sz The maximum value size in bytes if creating.\n @return 0 on success, -1 on failure."]
    pub fn splinter_create_or_open(
        name_or_path: *const ::std::os::raw::c_char,
        slots: usize,
        max_value_sz: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Closes the splinter store and unmaps the shared memory region."]
    pub fn splinter_close();
}
unsafe extern "C" {
    #[doc = " @brief Set the value of the auto_scrub flag on the current bus."]
    pub fn splinter_set_av(mode: ::std::os::raw::c_uint) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Engage hybrid auto scrub\n @return int (sets errno)"]
    pub fn splinter_set_hybrid_av() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Check hybrid status of auto scrub engagement\n @return int"]
    pub fn splinter_get_hybrid_av() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Check each key, and zero out memory past the value length to the\n allocated slot length (essentially sweep out any old data). Designed to be\n used as part of backfill runs when I/O slamming has stopped."]
    pub fn splinter_purge();
}
unsafe extern "C" {
    #[doc = " @brief Get the value of the auto_scrub flag on the current bus as integer."]
    pub fn splinter_get_av() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Sets or updates a key-value pair in the store.\n @param key The null-terminated key string.\n @param val Pointer to the value data.\n @param len The length of the value data. Must not exceed `max_val_sz`.\n @return 0 on success, -1 on failure (e.g., store is full)."]
    pub fn splinter_set(
        key: *const ::std::os::raw::c_char,
        val: *const ::std::os::raw::c_void,
        len: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief \"unsets\" a key.\n This function does one atomic operation to zero the slot hash, which marks the\n slot available for write. It then zeroes out the used key and value regions,\n and resets the slot.\n\n @param key The null-terminated key string.\n @return length of value deleted, -1 if key not found, - 2 if null key/store"]
    pub fn splinter_unset(key: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Retrieves the value associated with a key.\n @param key The null-terminated key string.\n @param buf The buffer to copy the value data into. Can be NULL to query size.\n @param buf_sz The size of the provided buffer.\n @param out_sz Pointer to a size_t to store the value's actual length. Can be NULL.\n @return 0 on success, -1 on failure. If buf_sz is too small, sets errno to EMSGSIZE."]
    pub fn splinter_get(
        key: *const ::std::os::raw::c_char,
        buf: *mut ::std::os::raw::c_void,
        buf_sz: usize,
        out_sz: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Lists all keys currently in the store.\n @param out_keys An array of `char*` to be filled with pointers to the keys.\n @param max_keys The maximum number of keys to write to `out_keys`.\n @param out_count Pointer to a size_t to store the number of keys found.\n @return 0 on success, -1 on failure."]
    pub fn splinter_list(
        out_keys: *mut *mut ::std::os::raw::c_char,
        max_keys: usize,
        out_count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Waits for a key's value to be changed.\n @param key The key to monitor for changes.\n @param timeout_ms The maximum time to wait in milliseconds.\n @return 0 if the value changed, -1 on timeout or if the key doesn't exist."]
    pub fn splinter_poll(
        key: *const ::std::os::raw::c_char,
        timeout_ms: u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Set a bus configuration value\n @param hdr: a splinter  bus header structure\n @param mask: bitmask to apply"]
    pub fn splinter_config_set(hdr: *mut splinter_header, mask: u8);
}
unsafe extern "C" {
    #[doc = " @brief Clear a bus configuration value\n @param hdr: a splinter  bus header structure\n @param mask: bitmask to clear"]
    pub fn splinter_config_clear(hdr: *mut splinter_header, mask: u8);
}
unsafe extern "C" {
    #[doc = " @brief Test a bus configuration value\n @param hdr: a splinter  bus header structure\n @param mask: bitmask to test"]
    pub fn splinter_config_test(hdr: *mut splinter_header, mask: u8) -> ::std::os::raw::c_int;
}
